#171 'all' indicator was removed

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/LayersLoadingIndicator.mustache
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/LayersLoadingIndicator.mustache
@@ -1,6 +1,6 @@
 <div id="LayersLoadingIndicator">
     <div class="loading"></div>
     <div class="indicators">
-        <span class="loaded"></span>/<span class="all"></span>
+        <span class="loaded">100</span>%
     </div>
 </div>
