--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/resource/SelectedResourcesTable.css
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/resource/SelectedResourcesTable.css
@@ -4,7 +4,7 @@
 .field-region { width: 12em; }
 .field-district { width: 13em; }
 .field-status { width: 12em; }
-.field-cabling_fact { width: 8em; }
+.field-cabling_plan { width: 8em; }
 .field-start_build_time { width: 8em; }
 .field-end_build_time { width: 8em; }
 .field-start_deliver_time { width: 9em; }
