#171 template and styles were changed for using progress bar

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/LayersLoadingIndicator.mustache
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/LayersLoadingIndicator.mustache
@@ -1,6 +1,3 @@
-<div id="LayersLoadingIndicator">
-    <div class="loading"></div>
-    <div class="indicators">
-        <span class="loaded">100</span>%
-    </div>
+<div id="LayersLoadingIndicator" class="meter" title="">
+    <span></span>
 </div>
