--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/css/LayersLoadingIndicator.css
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/css/LayersLoadingIndicator.css
@@ -1,22 +1,24 @@
 #LayersLoadingIndicator {
-    display: none;
+    /*display: none;*/
     position: absolute;
     top: 30px;
     right: 3px;
     background: transparent;
     z-index: 99999;
     font-size: 13px;
+    border: 1px solid rgb(218, 231, 231);
 }
 
-#LayersLoadingIndicator div.loading {
-    display: inline-block;
-    width: 32px;
-    height: 32px;
-    background-image: url('icons/loading.svg');
+.meter {
+    height: 12px;
+    width: 96px;
+    position: relative;
 }
 
-#LayersLoadingIndicator div.indicators {
+.meter > span {
     display: block;
-    float: right;
-    margin-top: 8px;
+    height: 100%;
+    background: rgb(23, 111, 193) linear-gradient(to top, rgb(23, 111, 193), rgb(138, 182, 216));
+    position: relative;
+    overflow: hidden;
 }
