min width for TableContainer

--- a/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/ReportGrid.html
+++ b/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/ReportGrid.html
@@ -11,7 +11,7 @@
         style="margin-bottom: 0px; overflow:auto">
 
          <div data-dojo-type="dojox/layout/TableContainer"
-              data-dojo-props="cols: 2, labelWidth: 150" style="width:50%">
+              data-dojo-props="cols: 2, labelWidth: 150" style="width:50%; min-width: 600px">
 
             <div data-dojo-attach-point="regionSelect"
                  data-dojo-type="ngw-compulink-reporting/RegionSelect"
