#189 added _rightPanelsState for resources types selector states

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -228,7 +228,7 @@
 
                 <!-- Правая панель -->
                 <div id='rightPanel'
-                     data-resource-type-filter="" ,
+                     data-resource-type-filter=""
                      data-dojo-type="dijit/layout/BorderContainer"
                      data-dojo-props="region: 'right', splitter: true, gutters: false"
                      style="width: 260px; padding: 0;">
@@ -236,15 +236,17 @@
 
                     <div data-dojo-type="dijit/layout/BorderContainer"
                          data-dojo-attach-point=""
-                         data-dojo-props="region: 'center'"
+                         data-dojo-props="region: 'center', gutters:true, liveSplitters:true"
+                         id="rightPanelsBorderContainer"
                          style="padding-left: 0; position: relative;">
 
                         <!-- Панель для размещения списка типа слоев Сит плана-->
                         <div id="sitLayersPane"
                              data-dojo-attach-point="sitPlanLayersTreePane"
                              data-dojo-type="dijit/layout/ContentPane"
-                             data-dojo-props="region: 'top', splitter: true"
-                             style="padding: 0; height: 50%; position: relative;" class="sit">
+                             data-dojo-props="region: 'center', splitter: true"
+                             data-right-panel="sit"
+                             style="padding: 0;height: 30%" class="sit">
                             <div class="title">Слои Сит. плана</div>
                             <div class="tree-overlay"></div>
                             <div class="tree-wrapper">
@@ -256,8 +258,9 @@
                         <div id="foclLayersPane"
                              data-dojo-attach-point="foclLayersTreePane"
                              data-dojo-type="dijit/layout/ContentPane"
-                             data-dojo-props="region: 'center'"
-                             style="padding: 0; height: 45%; position: relative;" class="vols">
+                             data-dojo-props="region: 'top', splitter: true"
+                             data-right-panel="focl"
+                             style="padding: 0;height: 30%" class="vols">
                             <div class="title">Слои ВОЛС</div>
                             <div class="tree-overlay"></div>
                             <div class="tree-wrapper">
@@ -269,9 +272,10 @@
                         <div id="legendPane"
                              data-dojo-type="dijit/layout/ContentPane"
                              data-dojo-props="region: 'bottom', splitter: true"
-                             style="padding: 0; height: 55%; position: relative;" class="leg">
+                             data-right-panel="legend"
+                             style="padding: 0;height: 40%" class="leg">
                             <div class="title">Легенда</div>
-                            <div class="legend_cont">
+                            <div class="legend_wrapper">
                                 <img src="${ngwConfig.compulinkAssetUrl}img/legend.png" />
                             </div>
                         </div>
