#234 added menu item for UCN reports

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
@@ -24,6 +24,9 @@
                         <a title="Открыть отчёт о ходе строительства" href="{{ headerData.reportUrl }}">Отчёт о ходе
                             строительства</a>
                     </li>
+                    <li>
+                        <a title="Открыть отчёт УЦН" href="{{ headerData.reportUcnUrl }}">Отчет УЦН</a>
+                    </li>
                 </ul>
             </li>
             <li>
