#238 AttributesEditor was added to Display template

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/templates/Display.html
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/templates/Display.html
@@ -171,6 +171,7 @@
                              data-dojo-type="dijit/layout/ContentPane"
                              data-dojo-props="region: 'center'"
                              style="padding: 0">
+                            <div id="attributesEditor" class="empty" data-dojo-type="ngw-compulink-editor/editor/AttributesEditor"></div>
                         </div>
                     </div>
 
@@ -187,7 +188,7 @@
                                value="pkkEnabled"
                                chceked="false"
                                style="margin-bottom: 8px;"
-                                />
+                        />
                         <label for="pkkCheck" style="width: 100%; margin-bottom: 8px;">Отображать кадастровое
                             деление</label>
 
@@ -251,7 +252,7 @@
                              style="padding: 0;height: 20%" class="leg">
                             <div class="title">Легенда</div>
                             <div class="legend_wrapper">
-                                <img src="${ngwConfig.compulinkAssetUrl}img/legend.png" />
+                                <img src="${ngwConfig.compulinkAssetUrl}img/legend.png"/>
                             </div>
                         </div>
                     </div>
