--- a/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/ucn/css/DivisionsSelect.css
+++ b/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/ucn/css/DivisionsSelect.css
@@ -7,11 +7,14 @@ div.districts-select inout {
     border: 1px #b5bcc7 solid;
 }
 
+div.input-wrapper {
+    padding-bottom: 1px;
+}
+
 div.tree-wrapper {
     width: 300px;
     height: 250px;
     overflow: auto;
-    margin-top: 1px;
 }
 
 div.districts-select {
