--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
@@ -25,7 +25,7 @@
                             строительства</a>
                     </li>
                     <li>
-                        <a title="Открыть отчёт УЦН" href="{{ headerData.reportUcnUrl }}">Отчет УЦН</a>
+                        <a title="Отчет по проекту УЦН" href="{{ headerData.reportUcnUrl }}">Отчет по проекту УЦН</a>
                     </li>
                 </ul>
             </li>
