optional px was removed

--- a/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/ReportGrid.html
+++ b/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/ReportGrid.html
@@ -8,7 +8,7 @@
 
     <div data-dojo-attach-point="toolbar" data-dojo-type="dijit/layout/ContentPane"
         data-dojo-props="region: 'top'"
-        style="margin-bottom: 0px; overflow:auto">
+        style="margin-bottom: 0; overflow:auto">
 
          <div data-dojo-type="dojox/layout/TableContainer"
               data-dojo-props="cols: 2, labelWidth: 150" style="width:50%; min-width: 600px">
@@ -28,7 +28,6 @@
                  data-dojo-attach-point="onlyOverdue"
                  data-dojo-props="value: true"
                  title="Только просроченные"></div>
-
         </div>
 
         <button data-dojo-type="dijit/form/Button"
