--- a/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/ReportGrid.html
+++ b/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/ReportGrid.html
@@ -3,40 +3,143 @@
      style="width: 100%; height: 100%">
 
     <div data-dojo-attach-point="gridPane" data-dojo-type="dijit/layout/ContentPane"
-        data-dojo-props="region: 'center'" style="padding: 0;">
+         data-dojo-props="region: 'center'" style="padding: 0;">
     </div>
 
     <div data-dojo-attach-point="toolbar" data-dojo-type="dijit/layout/ContentPane"
-        data-dojo-props="region: 'top'"
-        style="margin-bottom: 0; overflow:auto">
+         data-dojo-props="region: 'top'"
+         style="margin-bottom: 0; overflow:auto">
 
-         <div data-dojo-type="dojox/layout/TableContainer"
-              data-dojo-props="cols: 2, labelWidth: 150" style="width:50%; min-width: 600px">
+        <!--<div class="control-tabs">-->
+        <!--<div class="tabs" role="tabs">-->
+        <!--<ul class="tabs__menu">-->
+        <!--<li class="tabs__menu-item"><a href="#">По району</a></li>-->
+        <!--<li class="tabs__menu-item"><a href="#">По проекту</a></li>-->
+        <!--</ul>-->
+        <!--<div class="tabs__content">-->
+        <!--<div class="tabs__content-item">-->
+        <!--<div class="control-block-group">-->
+        <!--<label for="regionSelect">Субъект РФ</label>-->
 
-            <div data-dojo-attach-point="regionSelect"
-                 data-dojo-type="ngw-compulink-reporting/RegionSelect"
-                 data-dojo-props="regions: rlist"
-                 title="Субъект РФ" style="width:90%;"></div>
-            <div data-dojo-attach-point="statusSelect"
-                 data-dojo-type="ngw-compulink-reporting/StatusSelect"
-                 title="Статус" style="width:100%;"></div>
-            <div data-dojo-type="ngw-compulink-reporting/DistrictSelect"
-                 data-dojo-props="districts: dlist"
-                 data-dojo-attach-point="districtSelect"
-                 title="Район" style="width:90%;"></div>
-            <div data-dojo-type="dijit/form/CheckBox"
-                 data-dojo-attach-point="onlyOverdue"
-                 data-dojo-props="value: true"
-                 title="Только просроченные"></div>
-        </div>
+        <!--<div data-dojo-attach-point="regionSelect"-->
+        <!--data-dojo-type="ngw-compulink-reporting/RegionSelect"-->
+        <!--data-dojo-props="regions: rlist"-->
+        <!--id="regionSelect" style=""></div>-->
+        <!--</div>-->
+        <!--<div class="control-block-group">-->
+        <!--<label for="regionSelect">Район</label>-->
 
-        <button data-dojo-type="dijit/form/Button"
-                data-dojo-attach-point="buildReport"
-                type="button">Построить</button>
+        <!--<div data-dojo-type="ngw-compulink-reporting/DistrictSelect"-->
+        <!--data-dojo-props="districts: dlist"-->
+        <!--data-dojo-attach-point="districtSelect"-->
+        <!--id="districtSelect" style=""></div>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--<div class="tabs__content-item">-->
+        <!--<div class="control-block-group">-->
+        <!--<label for="buildingObjectsSelect">Проект</label>-->
 
-        <button data-dojo-type="dijit/form/Button"
-                data-dojo-attach-point="exportExcel"
-                type="button">Выгрузить в Excel</button>
+        <!--<div id="buildingObjectsSelect"-->
+        <!--data-dojo-attach-point="buildingObjectsSelect"-->
+        <!--data-dojo-type="ngw-compulink-reporting/BuildingObjectsSelect"></div>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
+
+        <!--<div class="controls-right">-->
+        <!--<div class="control-block-group">-->
+        <!--<label for="statusSelect">Статус</label>-->
+
+        <!--<div data-dojo-attach-point="statusSelect"-->
+        <!--data-dojo-type="ngw-compulink-reporting/StatusSelect"-->
+        <!--id="statusSelect" style=""></div>-->
+        <!--</div>-->
+        <!--<div class="control-block-group">-->
+        <!--<label for="onlyOverdue">Только просроченные</label>-->
+
+        <!--<div data-dojo-type="dijit/form/CheckBox"-->
+        <!--data-dojo-attach-point="onlyOverdue"-->
+        <!--data-dojo-props="value: true"-->
+        <!--id="onlyOverdue"></div>-->
+        <!--</div>-->
+        <!--</div>-->
+
+
+        <table class="parameters-table">
+            <tr>
+                <td>
+                    <div class="control-tabs">
+                        <div class="tabs" role="tabs">
+                            <ul class="tabs__menu">
+                                <li class="tabs__menu-item"><a href="#">По району</a></li>
+                                <li class="tabs__menu-item"><a href="#">По проекту</a></li>
+                            </ul>
+                            <div class="tabs__content">
+                                <div class="tabs__content-item">
+                                    <div class="control-block-group">
+                                        <label for="regionSelect">Субъект РФ</label>
+
+                                        <div data-dojo-attach-point="regionSelect"
+                                             data-dojo-type="ngw-compulink-reporting/RegionSelect"
+                                             data-dojo-props="regions: rlist"
+                                             id="regionSelect" style=""></div>
+                                    </div>
+                                    <div class="control-block-group">
+                                        <label for="regionSelect">Район</label>
+
+                                        <div data-dojo-type="ngw-compulink-reporting/DistrictSelect"
+                                             data-dojo-props="districts: dlist"
+                                             data-dojo-attach-point="districtSelect"
+                                             id="districtSelect" style=""></div>
+                                    </div>
+                                </div>
+                                <div class="tabs__content-item">
+                                    <div class="control-block-group">
+                                        <label for="buildingObjectsSelect">Проект</label>
+
+                                        <div id="buildingObjectsSelect"
+                                             data-dojo-attach-point="buildingObjectsSelect"
+                                             data-dojo-type="ngw-compulink-reporting/BuildingObjectsSelect"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <div class="control-block-group">
+                        <label for="statusSelect">Статус</label>
+
+                        <div data-dojo-attach-point="statusSelect"
+                             data-dojo-type="ngw-compulink-reporting/StatusSelect"
+                             id="statusSelect" style=""></div>
+                    </div>
+                    <div class="control-block-group">
+                        <label for="onlyOverdue">Только просроченные</label>
+
+                        <div data-dojo-type="dijit/form/CheckBox"
+                             data-dojo-attach-point="onlyOverdue"
+                             data-dojo-props="value: true"
+                             id="onlyOverdue"></div>
+                    </div>
+                    <button data-dojo-type="dijit/form/Button"
+                            data-dojo-attach-point="buildReport"
+                            type="button">Построить
+                    </button>
+
+                    <button data-dojo-type="dijit/form/Button"
+                            data-dojo-attach-point="exportExcel"
+                            type="button">Выгрузить в Excel
+                    </button>
+                </td>
+                <td>
+
+                </td>
+            </tr>
+        </table>
+
 
     </div>
 
