#269 added data-parameters-type for parameters type defining

--- a/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/ReportGrid.html
+++ b/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/ReportGrid.html
@@ -73,8 +73,8 @@
                     <div class="control-tabs">
                         <div class="tabs" role="tabs">
                             <ul class="tabs__menu">
-                                <li class="tabs__menu-item"><a href="#">По району</a></li>
-                                <li class="tabs__menu-item"><a href="#">По проекту</a></li>
+                                <li class="tabs__menu-item" data-parameters-type="district"><a href="#">По району</a></li>
+                                <li class="tabs__menu-item" data-parameters-type="project"><a href="#">По проекту</a></li>
                             </ul>
                             <div class="tabs__content">
                                 <div class="tabs__content-item">
