--- a/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/BuildingObjectsSelect.html
+++ b/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/BuildingObjectsSelect.html
@@ -1,6 +1,6 @@
 <div class="districts-select">
     <div class="input-wrapper">
-        <input type="text" placeholder="Введите подразделение"/>
+        <input type="text" placeholder="Выберите проект"/>
 
         <div
                 class="dijitReset dijitRight dijitButtonNode dijitArrowButton dijitDownArrowButton"
@@ -14,6 +14,3 @@
         <div class="tree"></div>
     </div>
 </div>
-
-
-
