#284 url was moved to ctor as parameter

--- a/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/ReportGrid.html
+++ b/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/ReportGrid.html
@@ -18,6 +18,7 @@
 
                         <div id="buildingObjectsSelect"
                              data-dojo-attach-point="buildingObjectsSelect"
+                             data-dojo-props="url: '/compulink/reporting/resources/child'"
                              data-dojo-type="ngw-compulink-reporting/BuildingObjectsSelect"></div>
                     </div>
                     <div class="control-block-group">
