--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/ConfirmDialog.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/ConfirmDialog.html
@@ -1,4 +1,4 @@
-<div style="width:300px;">
+<div>
 
     <div class="dijitDialogPaneContentArea">
         <div data-dojo-attach-point="contentNode" class="cd-contentNode">
