--- a/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/BuildingObjectsSelect.html
+++ b/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/BuildingObjectsSelect.html
@@ -10,7 +10,7 @@
             <div class="dijitReset dijitArrowButtonChar" role="presentation">▼</div>
         </div>
     </div>
-    <div class="tree-wrapper">
+    <div class="districts-tree-wrapper">
         <div class="tree"></div>
     </div>
 </div>
