--- a/nextgisweb_compulink/compulink_admin/amd/ngw-compulink-admin/reference_books/templates/RegionSelect.html
+++ b/nextgisweb_compulink/compulink_admin/amd/ngw-compulink-admin/reference_books/templates/RegionSelect.html
@@ -1,4 +1,4 @@
-<div class="districts-select">
+<div class="region-select active">
     <div class="input-wrapper">
         <input type="text" placeholder="Выберите проект"/>
 
