--- a/nextgisweb_compulink/compulink_admin/amd/ngw-compulink-admin/reference_books/templates/RegionSelect.html
+++ b/nextgisweb_compulink/compulink_admin/amd/ngw-compulink-admin/reference_books/templates/RegionSelect.html
@@ -1,6 +1,6 @@
 <div class="region-select active">
     <div class="input-wrapper">
-        <input type="text" placeholder="Выберите проект"/>
+        <input type="text" placeholder="Выберите местоположение"/>
 
         <div
                 class="dijitReset dijitRight dijitButtonNode dijitArrowButton dijitDownArrowButton"
