--- a/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/resource/ReportGrid.css
+++ b/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/resource/ReportGrid.css
@@ -2,9 +2,9 @@
     font-weight: bold;
 }
 
-.dgrid-row {
-    height: 3em;
-}
+/*.dgrid-row {*/
+    /*height: 3em;*/
+/*}*/
 
 .dgrid-cell {
     white-space: normal;
